create search fragment

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,10 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="splash_bg">#13D56A</color>
+    <color name="icons_color_search_input">#3F4949</color>
+    <color name="ic_arrow_color">#191C1C</color>
+    <color name="ic_add_color">#686B6F</color>
+    <color name="stroke_color_shape">#DAE4E5</color>
+    <color name="meal_shape_color">#FAFDFC</color>
+    <color name="title_color">#191C1C</color>
 </resources>
