--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,9 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="splash_bg">#13D56A</color>
+    <color name="blue">#41cdf9</color>
+    <color name="light_gray">#dae4e5</color>
+    <color name="text_color">#191C1C</color>
+    <color name="color_yellow">#f9c541</color>
+    <color name="color_red">#ba1a1a</color>
 </resources>
