--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,5 +21,5 @@
         <item name="postSplashScreenTheme">@style/Theme.NutritionsApp</item>
     </style>
 
-
+    <style name="Toolbar.TitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title" />
 </resources>
