--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,61 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-
-    <ImageButton
-        android:id="@+id/arrowIconSearchFragment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_outline_arrow_back_24"
-        android:background="@color/white"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="@dimen/large_margin"
-        android:layout_marginTop="20dp"
-        android:contentDescription="@string/meal_image"/>
-
-    <TextView
-        android:id="@+id/tvSearch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/large_margin"
-        android:text="@string/search"
-        app:layout_constraintBottom_toBottomOf="@+id/arrowIconSearchFragment"
-        app:layout_constraintStart_toEndOf="@id/arrowIconSearchFragment"
-        app:layout_constraintTop_toTopOf="@id/arrowIconSearchFragment"
-        android:textColor="@color/title_color"
-        android:textSize="@dimen/title_size"/>
+    android:layout_marginStart="@dimen/large_margin"
+    android:layout_marginEnd="@dimen/large_margin">
 
     <SearchView
+        android:id="@+id/searchViewInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/searchViewInput"
-        android:queryHint="@string/search_hint"
-        android:background="@drawable/meal_shape"
-        app:startIconDrawable="@drawable/ic_outline_search_24"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvSearch"
         android:layout_marginTop="@dimen/large_margin"
-        android:layout_marginStart="@dimen/large_margin"
-        android:layout_marginEnd="@dimen/large_margin"
+        android:background="@drawable/meal_shape"
+        android:closeIcon="@drawable/ic_outline_cancel_24"
         android:iconifiedByDefault="false"
-        android:closeIcon="@drawable/ic_outline_cancel_24"/>
+        android:queryHint="@string/search_hint"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:startIconDrawable="@drawable/ic_outline_search_24" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/mealRecyclerView"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="@dimen/large_margin"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/searchViewInput"
-        android:layout_marginStart="@dimen/large_margin"
-        android:layout_marginEnd="@dimen/large_margin"
         android:layout_marginBottom="@dimen/large_margin"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/searchViewInput" />
 </androidx.constraintlayout.widget.ConstraintLayout>
