--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,10 +8,10 @@
     <dimen name="padding_8dp">8dp</dimen>
     <dimen name="padding_4dp">4dp</dimen>
     <dimen name="text_margin">16dp</dimen>
-    <dimen name="image_width">150dp</dimen>
+    <dimen name="image_width">180dp</dimen>
     <dimen name="big_margin">24dp</dimen>
     <dimen name="headline_text_size">18sp</dimen>
-    <dimen name="card_corner_radius">12dp</dimen>
+    <dimen name="corner_radius">12dp</dimen>
     <dimen name="small_margin">8dp</dimen>
     <dimen name="default_margin">16dp</dimen>
     <dimen name="view_height">1dp</dimen>
