--- a/app/src/main/res/drawable/circular_progress_bar.xml
+++ b/app/src/main/res/drawable/circular_progress_bar.xml
@@ -4,10 +4,10 @@
         <shape
             android:innerRadiusRatio="2.7"
             android:shape="ring"
-            android:thicknessRatio="40.0"
+            android:thicknessRatio="10.0"
             android:useLevel="true">
 
-            <solid android:color="?attr/colorPrimary" />
+            <solid android:color="@color/white" />
 
         </shape>
     </item>
