--- a/app/src/main/res/layout/healthy_food.xml
+++ b/app/src/main/res/layout/healthy_food.xml
@@ -10,22 +10,26 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/small_margin"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:elevation="0dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="@dimen/padding_8dp">
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/healthyFoodImgV"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/img_card_dimen"
+                android:layout_height="@dimen/img_card_dimen"
                 android:layout_gravity="center"
-                android:src="@mipmap/ic_launcher" />
+                android:padding="@dimen/padding_8dp"
+                android:src="@drawable/pesto_chicken_zoodles" />
 
             <TextView
                 android:id="@+id/healthyFoodTv"
+                style="@style/subTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -39,22 +43,26 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/small_margin"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:elevation="0dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="@dimen/padding_8dp">
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/healthyFoodImgV2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/img_card_dimen"
+                android:layout_height="@dimen/img_card_dimen"
                 android:layout_gravity="center"
-                android:src="@mipmap/ic_launcher" />
+                android:padding="@dimen/padding_8dp"
+                android:src="@drawable/pesto_chicken_zoodles" />
 
             <TextView
                 android:id="@+id/healthyFoodTv2"
+                style="@style/subTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -67,22 +75,26 @@
         style="@style/Widget.Material3.CardView.Outlined"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:elevation="0dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="@dimen/padding_8dp">
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/healthyFoodImgV3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/img_card_dimen"
+                android:layout_height="@dimen/img_card_dimen"
                 android:layout_gravity="center"
-                android:src="@mipmap/ic_launcher" />
+                android:padding="@dimen/padding_8dp"
+                android:src="@drawable/pesto_chicken_zoodles" />
 
             <TextView
                 android:id="@+id/healthyFoodTv3"
+                style="@style/bodyText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
