--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,23 +2,56 @@
     <!-- Base application theme. -->
     <style name="Theme.NutritionsApp" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimary">@color/dark_teal</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/teal</item>
+        <item name="colorSecondaryVariant">@color/mealItemStrokeColor</item>
+        <item name="colorOnSecondary">@color/white</item>
+
         <!-- Status bar color. -->
 
         <item name="android:statusBarColor">?attr/colorOnPrimary</item>
         <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
     </style>
 
+    <style name="chip" parent="Widget.Material3.Chip.Filter">
+        <item name="chipStrokeColor">@color/light_gray</item>
+        <item name="chipSurfaceColor">?attr/colorSurface</item>
+        <item name="chipBackgroundColor">@color/chip_teal</item>
+    </style>
+
     <style name="Theme.App.Starting" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">@color/ic_launcher_background</item>
         <item name="windowSplashScreenAnimatedIcon">@mipmap/ic_launcher_foreground</item>
         <item name="postSplashScreenTheme">@style/Theme.NutritionsApp</item>
+    </style>
+
+    <style name="titleText">
+        <item name="android:fontFamily">sans-serif-black</item>
+        <item name="android:textSize">@dimen/title_font</item>
+    </style>
+
+    <style name="subTitle">
+        <item name="android:fontFamily">sans-serif-black</item>
+        <item name="android:textSize">@dimen/subtitle_font</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="alpha">.4</item>
+    </style>
+
+    <style name="subBodyText">
+        <item name="android:fontFamily">sans-serif-black</item>
+        <item name="android:textSize">@dimen/body_font</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="alpha">.4</item>
+    </style>
+
+    <style name="bodyText">
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:textSize">@dimen/subtitle_font</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="alpha">.4</item>
     </style>
 
     <style name="Toolbar.TitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title" />
