--- a/app/src/main/res/layout/healthy_food.xml
+++ b/app/src/main/res/layout/healthy_food.xml
@@ -94,7 +94,7 @@
 
             <TextView
                 android:id="@+id/healthyFoodTv3"
-                style="@style/bodyText"
+                style="@style/subTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
